crates/runhaven-tui/src/tui/snapshots/runhaven_mvp_confirm_120x48.snap
---
source: crates/runhaven-tui/src/tui/runhaven/mvp_snapshots.rs
expression: rendered
---

  RunHaven v0.5.0  Step 4/4: Confirm launch
  Final check before launch.

  Agent       antigravity
  Network     provider allowlist
  Boundary    /workspace only
  Host home   not mounted
  Credentials not mounted by default

  Press Enter to prepare launch. RunHaven starts it after restoring the terminal.

  Exact command
  container run --rm --init --name runhaven-antigravity-snapshot-run --read-only --mount
  type=bind,source=/tmp/runhaven-snapshot-workspace,target=/workspace --network runhaven-provider
  runhaven/antigravity:0.1.0 antigravity

  esc goes back. enter confirms. q quits.
