crates/runhaven-tui/src/tui/snapshots/runhaven_mvp_typed_confirm_120x48.snap
---
source: crates/runhaven-tui/src/tui/runhaven/mvp_snapshots.rs
expression: rendered
---

  RunHaven v0.5.0  Step 4/4: Confirm launch
  Final check before launch.

  Agent       shell
  Network     internet unrestricted
  Boundary    /workspace only
  Host home   not mounted
  Credentials not mounted by default

  This plan needs typed confirmation.
  Type launch, then press Enter.
  This step prepares the launch. RunHaven starts it after restoring the terminal.

  Exact command
  container run --rm --init --name runhaven-shell-snapshot-run --read-only --mount
  type=bind,source=/tmp/runhaven-snapshot-workspace,target=/workspace --network internet runhaven/shell:0.1.0 shell

  Safety notes
  - Unrestricted internet can reach hosts outside the provider allowlist.

  esc goes back. enter confirms.























  > confirmation phrase
    type launch
